<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/DarkGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:text="Top Power Cell"
            android:textAlignment="center"
            android:textColor="@color/MediumBlue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/teleTopPC"
            android:backgroundTint="@color/Goldish"
            android:text="0" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Bottom Power Cell"
            android:layout_weight="1.6"
            android:textAlignment="center"
            android:textColor="@color/MediumBlue"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="0"
            android:id="@+id/teleBottomPC"
            android:backgroundTint="@color/Goldish"
            android:layout_weight="1"/>
    </LinearLayout>
    <android.support.v7.widget.ScrollingTabContainerView.TabView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remove power cell"
                android:textColor="@color/DarkGreen"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Control Panel"
                android:textColor="@color/MediumBlue"
                android:textStyle="bold"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/DarkGreen"
                android:text="@string/disabled"
                android:id="@+id/disabled_Cb"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foul"
                android:textColor="@color/Yellow"
                />
            <com.vandenrobotics.saga.views.NumberPicker
                android:id="@+id/foul_Np"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.vandenrobotics.saga.views.NumberPicker>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tech_foul"
                android:textColor="@color/Yellow"/>
            <com.vandenrobotics.saga.views.NumberPicker
                android:id="@+id/techFoul_Np"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </com.vandenrobotics.saga.views.NumberPicker>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:id="@+id/redCard_Cb"
                android:text="@string/CheckBox_redCard"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:id="@+id/yellowCard_Cb"
                android:text="@string/CheckBox_yellowCard"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/finish_match"
                android:id="@+id/finishMatch_Btn"
                android:onClick="finishMatch"/>
        </LinearLayout>
    </android.support.v7.widget.ScrollingTabContainerView.TabView>
</LinearLayout>
